@@ -351,6 +351,7 @@ void R_Busy(int which)
  */
 
 void R_dot_Last(void);		/* in main.c */
+void R_RunExitFinalizers(void);	/* in memory.c */
 
 
 void R_CleanUp(SA_TYPE saveact, int status, int runLast)
@@ -390,6 +391,7 @@ void R_CleanUp(SA_TYPE saveact, int status, int runLast)
     default:
 	break;
     }
+    R_RunExitFinalizers();
     CleanEd();
     closeAllHlpFiles();
     KillAllDevices();
