@@ -576,6 +576,7 @@ void R_CleanUp(SA_TYPE saveact, int status, int runLast)
     }
     
     
+    R_RunExitFinalizers();
     KillAllDevices();
     if(saveact != SA_SUICIDE && R_CollectWarnings)
 	PrintWarnings();	/* from device close and .Last */
