@@ -463,6 +463,7 @@ void Rstd_Busy(int which)
  */
 
 void R_dot_Last(void);		/* in main.c */
+void R_RunExitFinalizers(void);	/* in memory.c */
 
 void Rstd_CleanUp(SA_TYPE saveact, int status, int runLast)
 {
@@ -517,6 +518,7 @@ void Rstd_CleanUp(SA_TYPE saveact, int status, int runLast)
     default:
         break;
     }
+    R_RunExitFinalizers();
     CleanEd();
     KillAllDevices();
     if(saveact != SA_SUICIDE && R_CollectWarnings)
