@@ -158,6 +158,9 @@ NEW FEATURES
     o   All methods for download.file() do tilde-expansion on the path
 	name.
 
+    o   Finalizers can be regeitered to be run on system exit for both
+	reachable and unreachable objects.
+
 
 
 BUG FIXES
